version/0.35/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

========
Examples
========
End-to-end examples show how you can use PyFluent. If the PyFluent ``ansys-fluent-core`` package is installed on your machine,
you can download these examples as Python files or Jupyter notebooks and run them locally.

.. toctree::
   :maxdepth: 1
   :hidden:

   00-fluent/README.txt


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Simulation Examples
===================
These examples show you how you can use Fluent capabilities from Python to perform
Fluent simulations. This includes geometry import, Fluent's meshing workflows,
setting up and running the solver, and reviewing the results using Fluent's
postprocessing capabilities.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Design of Experiments and Machine Learning model building">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_DOE_ML_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_DOE_ML.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Design of Experiments and Machine Learning model building</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ahmed Body External Aerodynamics Simulation">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_ahmed_body_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_ahmed_body_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ahmed Body External Aerodynamics Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Objective: ==========">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_brake_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_brake.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Automotive Brake Thermal Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Conjugate Heat Transfer">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_conjugate_heat_transfer_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_conjugate_heat_transfer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Conjugate Heat Transfer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the guided workflow for fault-tolerant meshing because it is appropriate for geometries that can have imperfections, such as gaps and leakages.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_exhaust_system_settings_api_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_exhaust_system_settings_api.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fault-tolerant meshing workflow using settings objects</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the guided workflow for watertight geometry meshing because it is appropriate for geometries that can have no imperfections, such as gaps and leakages.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_external_compressible_flow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_external_compressible_flow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling External Compressible Flow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Impeller-Volute simulation using the Frozen Rotor Approach">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_frozen_rotor_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_frozen_rotor_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Impeller-Volute simulation using the Frozen Rotor Approach</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyFluent uses the following loop at each timestep to retrofit the required functionality to Fluent:">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_lunar_lander_thermal_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_lunar_lander_thermal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Thermal Model of a Lunar Lander Using the Monte Carlo Radiation Model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses settings objects.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_mixing_elbow_settings_api_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_mixing_elbow_settings_api.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fluent setup and solution using settings objects</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Mixing Tank Workflow">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_mixing_tank_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_mixing_tank_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mixing Tank Workflow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Modeling Ablation">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_modeling_ablation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_modeling_ablation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Ablation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the multiphase modeling capability of Ansys Fluent, and will be able to predict the strong cavitation near the orifice after flow separation at a sharp edge.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_modeling_cavitation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_modeling_cavitation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Cavitation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parametric study workflow">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_parametric_static_mixer_1_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_parametric_static_mixer_1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parametric study workflow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Workflow tasks">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_radiation_headlamp_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_radiation_headlamp.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Radiation in a Headlamp Using the Monte Carlo Method</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Single Battery Cell Using MSMD Battery Model Simulation">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_single_battery_cell_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_single_battery_cell_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Single Battery Cell Using MSMD Battery Model Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Modeling Species Transport and Gaseous Combustion">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_species_transport_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_species_transport.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Species Transport and Gaseous Combustion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Tyler-Sofrin Compressor Modes Post-Processing">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_tyler_sofrin_modes_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_tyler_sofrin_modes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tyler-Sofrin Compressor Modes Post-Processing</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-fluent/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
